# beat-edl

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: build-windows.yml  ci.yml  release.yml
docs/: spec.md
packaging/: beat-edl.spec  build.ps1  entry.py
src/beat_edl/: __init__.py  __main__.py  api.py  cli.py  core.py  timecode.py
src/beat_edl/detection/: __init__.py  base.py  librosa_backend.py  madmom_backend.py
src/beat_edl/edl/: __init__.py  writer.py
src/beat_edl/web/: app.js  index.html  style.css
tests/: test_edl.py  test_timecode.py
web/: app.js  style.css
