[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "beat-edl"
version = "0.1.0"
description = "Generate DaVinci Resolve EDL markers from an audio file's beats"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

# Runtime dependencies. The librosa backend (always-on default) plus the
# pywebview GUI shell. madmom is intentionally NOT listed here: it needs a git
# build with --no-build-isolation and does not belong in the lockfile. See
# docs/spec.md and CLAUDE.md for the optional madmom install.
dependencies = [
    "librosa>=0.10",
    "soundfile>=0.12",
    "pywebview>=5.0",
    "numpy>=1.22",
]

[dependency-groups]
# Managed by uv (`uv sync` installs these by default).
dev = [
    "pytest>=7",
    "pyinstaller>=6",
]

[project.scripts]
beat-edl = "beat_edl.__main__:main"
beat-edl-cli = "beat_edl.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# The web UI ships inside the package so installed/frozen builds can find it.
"beat_edl" = ["web/*"]

[tool.uv]
# Keep the resolver from trying to build the project against an isolated env
# that lacks our pinned build deps is unnecessary here; defaults are fine.
package = true

[tool.semantic_release]
# Automated versioning from Conventional Commits (see release.yml).
# The version literal is kept in sync in both files so the frozen exe reports
# the right __version__.
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/beat_edl/__init__.py:__version__"]
# The exe is built in a separate CI job, so no build step here.
build_command = ""
commit_message = "chore(release): v{version}"

[tool.semantic_release.branches.main]
match = "main"
